--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ bin-release/
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
 
-./2º Cuatrimestre/[TFG] Trabajo de Fin de Grado/
+2º Cuatrimestre/[TFG] Trabajo de Fin de Grado/
