--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,4 @@ bin-release/
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
 
-2º Cuatrimestre/[TFG] Trabajo de Fin de Grado/
+C:\Users\afmhu\OneDrive - UNIVERSIDAD DE HUELVA\4º Curso\2º Cuatrimestre\[TFG] Trabajo de Fin de Grado
